--- a/config/crd/bases/app.dac.nokia.com.example.com_smlevoes.yaml
+++ b/config/crd/bases/app.dac.nokia.com.example.com_smlevoes.yaml
@@ -74,7 +74,7 @@ spec:
             - replicaCount
             type: object
           status:
-            description: ConsulStatus defines the observed state of Consul
+            description: SmlEvoStatus defines the observed state of SmlEvo
             properties:
               appReportedData:
                 properties:
