--- a/deployment/app-deployment/templates/sml-evo-ss.yaml
+++ b/deployment/app-deployment/templates/sml-evo-ss.yaml
@@ -38,7 +38,7 @@ spec:
           resources:
             limits:
               cpu: 750m
-              memory: 2Gi
+              memory: 384Mi
           ports:
             - containerPort: {{.Values.service.uiport}}
               name: ui-port
