--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: controller-manager
-  namespace: system
+  name: sml-evo-controller-manager
+  namespace: sml-evo-system
