changing the names of the repository for operator and evo

--- a/deployment/app-deployment/templates/sml-evo-ss.yaml
+++ b/deployment/app-deployment/templates/sml-evo-ss.yaml
@@ -33,7 +33,7 @@ spec:
             claimName: storage-persvol-1
       containers:
         - name: orchestrator
-          image: smartmobilelabs/dummy:evo1
+          image: smartmobilelabs/evo:117_default
           imagePullPolicy: IfNotPresent
           resources:
             limits:
