--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: localhost:32000/sml-evo-operator
-  newTag: 0.0.65
+  newName: smartmobilelabs/evo-operator
+  newTag: 0.0.70
