--- a/bundle/manifests/sml-evo-manager-config_v1_configmap.yaml
+++ b/bundle/manifests/sml-evo-manager-config_v1_configmap.yaml
@@ -11,7 +11,7 @@ data:
       port: 9443
     leaderElection:
       leaderElect: true
-      resourceName: 1ef6b27e.example.com
+      resourceName: 1ef6b27e.smartmobilelabs.com
 kind: ConfigMap
 metadata:
   name: sml-evo-manager-config
