--- a/config/crd/patches/cainjection_in_smlevoes.yaml
+++ b/config/crd/patches/cainjection_in_smlevoes.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: smlevoes.app.dac.nokia.com.example.com
+  name: smlevoes.app.dac.nokia.com
