--- a/config/crd/patches/webhook_in_smlevoes.yaml
+++ b/config/crd/patches/webhook_in_smlevoes.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: smlevoes.app.dac.nokia.com.example.com
+  name: smlevoes.app.dac.nokia.com
 spec:
   conversion:
     strategy: Webhook
