--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -26,9 +26,21 @@ rules:
   - update
   - watch
 - apiGroups:
-  - app.dac.nokia.com.example.com
+  - app.dac.nokia.com
   resources:
-  - smlevoes
+  - smlevoes/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - app.dac.nokia.com
+  resources:
+  - smlevoes/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - app.dac.nokia.comresources=smlevoes
   verbs:
   - create
   - delete
@@ -37,20 +49,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - app.dac.nokia.com.example.com
-  resources:
-  - smlevoes/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - app.dac.nokia.com.example.com
-  resources:
-  - smlevoes/status
-  verbs:
-  - get
-  - patch
-  - update
 - apiGroups:
   - ops.dac.nokia.com
   resources:
