--- a/config/rbac/smlevo_editor_role.yaml
+++ b/config/rbac/smlevo_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: smlevo-editor-role
 rules:
 - apiGroups:
-  - app.dac.nokia.com.example.com
+  - app.dac.nokia.com
   resources:
   - smlevoes
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - app.dac.nokia.com.example.com
+  - app.dac.nokia.com
   resources:
   - smlevoes/status
   verbs:
