--- a/config/rbac/smlevo_viewer_role.yaml
+++ b/config/rbac/smlevo_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: smlevo-viewer-role
 rules:
 - apiGroups:
-  - app.dac.nokia.com.example.com
+  - app.dac.nokia.com
   resources:
   - smlevoes
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - app.dac.nokia.com.example.com
+  - app.dac.nokia.com
   resources:
   - smlevoes/status
   verbs:
