--- a/config/samples/app.dac.nokia.com_v1alpha1_smlevo.yaml
+++ b/config/samples/app.dac.nokia.com_v1alpha1_smlevo.yaml
@@ -1,4 +1,4 @@
-apiVersion: app.dac.nokia.com.example.com/v1alpha1
+apiVersion: app.dac.nokia.com/v1alpha1
 kind: SmlEvo
 metadata:
   name: sml-evo-1
