changing image to support env var and also increased memory to 4Gi

--- a/deployment/app-deployment/templates/sml-evo-ss.yaml
+++ b/deployment/app-deployment/templates/sml-evo-ss.yaml
@@ -33,12 +33,12 @@ spec:
             claimName: storage-persvol-1
       containers:
         - name: orchestrator
-          image: smartmobilelabs/evo:117_default
+          image: smartmobilelabs/evo:mtvprod_96_default
           imagePullPolicy: IfNotPresent
           resources:
             limits:
               cpu: 750m
-              memory: 384Mi
+              memory: 4Gi
           ports:
             - containerPort: {{.Values.service.uiport}}
               name: ui-port
