--- a/bundle/manifests/sml-evo.clusterserviceversion.yaml
+++ b/bundle/manifests/sml-evo.clusterserviceversion.yaml
@@ -23,6 +23,7 @@ metadata:
                 "10.40.1.0/28"
               ],
               "apnUUID": "apn:169dfa4d-bc39-444b-7feb-b236909802d8",
+              "appPodFixIp": "10.32.1.1",
               "customerNetwork": "10.32.1.0/28"
             },
             "replicaCount": 1
@@ -32,7 +33,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.12.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
-  name: sml-evo.v0.0.97
+  name: sml-evo.v0.0.101
   namespace: sml-evo-system
 spec:
   apiservicedefinitions: {}
@@ -154,7 +155,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: smartmobilelabs/evo-operator:0.0.97
+                image: smartmobilelabs/evo-operator:0.0.101
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -234,4 +235,4 @@ spec:
   maturity: alpha
   provider:
     name: sml-evo
-  version: 0.0.97
+  version: 0.0.101
