--- a/config/crd/bases/app.dac.nokia.com_smlevoes.yaml
+++ b/config/crd/bases/app.dac.nokia.com_smlevoes.yaml
@@ -57,6 +57,8 @@ spec:
                     type: array
                   apnUUID:
                     type: string
+                  appPodFixIp:
+                    type: string
                   customerNetwork:
                     type: string
                 required:
@@ -136,6 +138,8 @@ spec:
                           type: string
                         type: array
                       apnUUID:
+                        type: string
+                      appPodFixIp:
                         type: string
                       customerNetwork:
                         type: string
