--- a/config/samples/app.dac.nokia.com_v1alpha1_smlevo.yaml
+++ b/config/samples/app.dac.nokia.com_v1alpha1_smlevo.yaml
@@ -9,9 +9,8 @@ spec:
     udpPortHigh: 11000
     udpPortLow: 10000
     uiPort: 9000
-  replicaCount: 1
   privateNetworkAccess:
-    customerNetwork: 10.32.1.0/28
+    applicationNetwork: 10.32.1.0/28
     apnUUID: apn:169dfa4d-bc39-444b-7feb-b236909802d8
     additionalRoutes:
     - 10.30.1.0/28
