--- a/deployment/app-deployment/values.yaml
+++ b/deployment/app-deployment/values.yaml
@@ -12,4 +12,8 @@ service:
   udpportrangelow : [[ .Ports.UdpPortRangeLow ]]
   udpportrangehigh : [[ .Ports.UdpPortRangeLow ]]
   bindaddress: [[ .PrivateNetworkAccess.AppPodFixIp  ]]
+  domain:
+    name: [[ .Domain.Name ]]
+    networkId: [[ .Domain.NetworkId ]]
+
 
