--- a/bundle/manifests/sml-evo.clusterserviceversion.yaml
+++ b/bundle/manifests/sml-evo.clusterserviceversion.yaml
@@ -11,6 +11,10 @@ metadata:
             "name": "sml-evo-1"
           },
           "spec": {
+            "domain": {
+              "name": "foo1",
+              "networkId": "foo123"
+            },
             "metricsDomainName": "sml-evo.192.168.50.10.nip.io",
             "ports": {
               "udpPortHigh": 11000,
@@ -32,7 +36,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.12.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
-  name: sml-evo.v0.0.109
+  name: sml-evo.v0.0.117
   namespace: sml-evo-system
 spec:
   apiservicedefinitions: {}
@@ -154,7 +158,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: smartmobilelabs/evo-operator:0.0.109
+                image: smartmobilelabs/evo-operator:0.0.117
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -234,4 +238,4 @@ spec:
   maturity: alpha
   provider:
     name: sml-evo
-  version: 0.0.109
+  version: 0.0.117
